<resources>
    <string name="app_name">Firebase Fish Tracker</string>
    <string name="fish_caught">Fish caught so far...</string>
    <string name="add_fish">Add a fish</string>
    <string name="fish_details">Fish Details</string>
    <string name="date">Date</string>
    <string name="create_new_user">Create New User</string>
    <string name="email">Email:</string>
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="jenni_gmail_com">jenni@gmail.com</string>
</resources>

